<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="dextrous.app.hack.ai.cedric.activity.HomeActivity"
    tools:showIn="@layout/activity_home">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:id="@+id/logo"
        android:src="@mipmap/ic_logo"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/logo_content_value" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/about_app_label"
        android:id="@+id/textView"
        android:layout_below="@+id/logo"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/about_app_value"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_file_label"
        android:id="@+id/choose_button"
        android:padding="16dp"
        android:drawableStart="@android:drawable/ic_menu_gallery"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capture_image_label"
        android:id="@+id/capture_button"
        android:padding="16dp"
        android:drawableStart="@android:drawable/ic_menu_camera"
        android:layout_below="@+id/textView2"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
